@@ -11,6 +11,8 @@
 @item adapted documentation to fix bug #12090 (@url{https://gna.org/bugs/?12090}): syntax description deviated from implementation
 
 @item small changes to the test scripts and the lexer to make LoLA compilable on FreeBSD
+
+@item added a directory @file{src/configs} containing some example configurations for LoLA; for each file @file{userconfig.H.xxx} exists a Makefile target @samp{lola-xxx} which compiles LoLA with that configuration -- note that the file @file{src/userconfig.H} will be overwritten
 @end itemize
 
 
